# bradiphopy

./: README.md  requirements.txt  setup.cfg  setup.py
bradiphopy/: bdp_ops.py  bradipho_helper.py  fury.py  io.py  segment.py  utils.py
scripts/: bdp_balance_luminance.py  bdp_batch_rename_parcellations.py  bdp_colorize_vtk_formats.py  bdp_compute_coverage_surfaces_and_tractograms.py  bdp_convert_nifti_to_surface.py  bdp_convert_surface_to_nifti.py  bdp_convert_vtk_formats.py  bdp_filter_surfaces_with_tractogram.py  bdp_filter_tractogram_with_surfaces.py  bdp_generate_tubes_from_streamlines.py  bdp_make_symmetric.py  bdp_match_bundles_to_labels.py  bdp_match_bundles_to_parcellations.py  bdp_match_neighbors.py  bdp_match_parcellations_to_tractograms.py  bdp_point_cloud_math.py  bdp_print_info.py  bdp_quick_merge_atlas.py  bdp_rotate_scene.py  bdp_scale_file.py  bdp_scale_surface_file.py  bdp_scale_tractography_file.py  bdp_transfer_annot.py  make_symmetric.py  quick_merge_atlas.py  us_add_time_value.py  us_change_rgb_array.py
