[metadata]
name = bradiphopy
url = https://github.com/minilabus/bradiphopy
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

license = None
description = Utilis for surfaces or point clouds manipulation in the BraDiPho project
long_description = file:README.md
long_description_content_type = text/markdown
platforms = OS Independent

packages = find:
include_package_data = True

[options]
python_requires = >=3.7
setup_requires = packaging >=19.0
install_requires = 
      nibabel >= 3.*
      dipy >= 1.5.*

[options.extras_require]
test =
      flake8
      pytest>=7.*
      pytest-console-scripts>=0.*
      fury
      dipy