[metadata]
name = bradiphopy
url = https://github.com/minilabus/bradiphopy
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering

license = BSD License
description = Utils for surfaces or point clouds manipulation in the BraDiPho project
long_description = file:README.md
long_description_content_type = text/markdown
platforms = OS Independent

packages = find:
include_package_data = True